# LinearSystemSolve

./: CMakeLists.txt  Exception.cpp  README.md  Solution.cpp  Solution.h  main.cpp
include/: Exception.hpp  Solution.hpp  functions.hpp
source/: Exception.cpp  LinSolve_app.cpp  functions.cpp
